@@ -1,5 +1,5 @@
-// Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
-package com.yahoo.vespa.hosted.provision.maintenance;
+// Copyright 2019 Oath Inc. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
+package com.yahoo.vespa.hosted.provision.provisioning;
 
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.ClusterMembership;
@@ -11,6 +11,7 @@ import com.yahoo.config.provision.Provisioner;
 import com.yahoo.vespa.hosted.provision.Node;
 import com.yahoo.vespa.hosted.provision.NodeRepository;
 import com.yahoo.vespa.hosted.provision.NodeRepositoryTester;
+import com.yahoo.vespa.hosted.provision.maintenance.InfrastructureVersions;
 import com.yahoo.vespa.hosted.provision.node.Agent;
 import com.yahoo.vespa.hosted.provision.node.Allocation;
 import com.yahoo.vespa.hosted.provision.node.Generation;
@@ -21,12 +22,10 @@ import com.yahoo.vespa.service.monitor.InfraApplicationApi;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameters;
 
-import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.mockito.Matchers.any;
 import static org.mockito.Matchers.anyInt;
@@ -41,11 +40,12 @@ import static org.mockito.Mockito.when;
  * @author freva
  */
 @RunWith(Parameterized.class)
-public class InfrastructureProvisionerTest {
+public class InfraDeployerImplTest {
 
-    @Parameters(name = "application={0}")
+
+    @Parameterized.Parameters(name = "application={0}")
     public static Iterable<Object[]> parameters() {
-        return Arrays.asList(
+        return List.of(
                 new InfraApplicationApi[]{new ConfigServerApplication()},
                 new InfraApplicationApi[]{new ControllerApplication()}
         );
@@ -56,8 +56,8 @@ public class InfrastructureProvisionerTest {
     private final NodeRepository nodeRepository = tester.nodeRepository();
     private final InfrastructureVersions infrastructureVersions = nodeRepository.infrastructureVersions();
     private final DuperModelInfraApi duperModelInfraApi = mock(DuperModelInfraApi.class);
-    private final InfrastructureProvisioner infrastructureProvisioner = new InfrastructureProvisioner(
-            provisioner, nodeRepository, Duration.ofDays(99), duperModelInfraApi);
+    private final InfraDeployerImpl infraDeployer;
+
     private final HostName node1 = HostName.from("node-1");
     private final HostName node2 = HostName.from("node-2");
     private final HostName node3 = HostName.from("node-3");
@@ -67,17 +67,18 @@ public class InfrastructureProvisionerTest {
     private final InfraApplicationApi application;
     private final NodeType nodeType;
 
-    public InfrastructureProvisionerTest(InfraApplicationApi application) {
+    public InfraDeployerImplTest(InfraApplicationApi application) {
+        when(duperModelInfraApi.getSupportedInfraApplications()).thenReturn(List.of(application));
         this.application = application;
         this.nodeType = application.getCapacity().type();
-        when(duperModelInfraApi.getSupportedInfraApplications()).thenReturn(Collections.singletonList(application));
+        this.infraDeployer = new InfraDeployerImpl(nodeRepository, provisioner, duperModelInfraApi);
     }
 
     @Test
     public void remove_application_if_without_target_version() {
         addNode(1, Node.State.active, Optional.of(target));
         when(duperModelInfraApi.infraApplicationIsActive(eq(application.getApplicationId()))).thenReturn(true);
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
         verify(duperModelInfraApi).infraApplicationRemoved(application.getApplicationId());
         verifyRemoved(1);
     }
@@ -97,7 +98,7 @@ public class InfrastructureProvisionerTest {
         addNode(1, Node.State.failed, Optional.of(target));
         addNode(2, Node.State.parked, Optional.empty());
         when(duperModelInfraApi.infraApplicationIsActive(eq(application.getApplicationId()))).thenReturn(applicationIsActive);
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
         if (applicationIsActive) {
             verify(duperModelInfraApi).infraApplicationRemoved(application.getApplicationId());
             verifyRemoved(1);
@@ -118,7 +119,7 @@ public class InfrastructureProvisionerTest {
 
         when(duperModelInfraApi.infraApplicationIsActive(eq(application.getApplicationId()))).thenReturn(true);
 
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
         verify(duperModelInfraApi, never()).infraApplicationRemoved(any());
         verify(duperModelInfraApi).infraApplicationActivated(any(), any());
         verify(provisioner).activate(any(), any(), any());
@@ -134,15 +135,15 @@ public class InfrastructureProvisionerTest {
         addNode(4, Node.State.failed, Optional.empty());
         addNode(5, Node.State.dirty, Optional.empty());
 
-        when(provisioner.prepare(any(), any(), any(), anyInt(), any())).thenReturn(Arrays.asList(
-                new HostSpec(node1.value(), Collections.emptyList()),
-                new HostSpec(node3.value(), Collections.emptyList())));
+        when(provisioner.prepare(any(), any(), any(), anyInt(), any())).thenReturn(List.of(
+                new HostSpec(node1.value(), List.of()),
+                new HostSpec(node3.value(), List.of())));
 
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
 
         verify(provisioner).prepare(eq(application.getApplicationId()), any(), any(), anyInt(), any());
         verify(provisioner).activate(any(), eq(application.getApplicationId()), any());
-        verify(duperModelInfraApi).infraApplicationActivated(application.getApplicationId(), Arrays.asList(node3, node1));
+        verify(duperModelInfraApi).infraApplicationActivated(application.getApplicationId(), List.of(node3, node1));
     }
 
 
@@ -153,20 +154,20 @@ public class InfrastructureProvisionerTest {
         addNode(1, Node.State.active, Optional.of(target));
 
         when(duperModelInfraApi.infraApplicationIsActive(eq(application.getApplicationId()))).thenReturn(false);
-        when(provisioner.prepare(any(), any(), any(), anyInt(), any())).thenReturn(Collections.singletonList(
-                new HostSpec(node1.value(), Collections.emptyList())));
+        when(provisioner.prepare(any(), any(), any(), anyInt(), any())).thenReturn(List.of(
+                new HostSpec(node1.value(), List.of())));
 
-        infrastructureProvisioner.maintain();
-
-        verify(provisioner, never()).prepare(any(), any(), any(), anyInt(), any());
-        verify(provisioner, never()).activate(any(), any(), any());
-        verify(duperModelInfraApi, times(1)).infraApplicationActivated(application.getApplicationId(), Arrays.asList(node1));
-
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
 
         verify(provisioner, never()).prepare(any(), any(), any(), anyInt(), any());
         verify(provisioner, never()).activate(any(), any(), any());
-        verify(duperModelInfraApi, times(2)).infraApplicationActivated(application.getApplicationId(), Arrays.asList(node1));
+        verify(duperModelInfraApi, times(1)).infraApplicationActivated(application.getApplicationId(), List.of(node1));
+
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
+
+        verify(provisioner, never()).prepare(any(), any(), any(), anyInt(), any());
+        verify(provisioner, never()).activate(any(), any(), any());
+        verify(duperModelInfraApi, times(2)).infraApplicationActivated(application.getApplicationId(), List.of(node1));
     }
 
     @Test
@@ -177,16 +178,16 @@ public class InfrastructureProvisionerTest {
         addNode(2, Node.State.inactive, Optional.of(target));
         addNode(3, Node.State.active, Optional.of(oldVersion));
 
-        when(duperModelInfraApi.getSupportedInfraApplications()).thenReturn(Collections.singletonList(application));
-        when(provisioner.prepare(any(), any(), any(), anyInt(), any())).thenReturn(Arrays.asList(
-                new HostSpec(node2.value(), Collections.emptyList()),
-                new HostSpec(node3.value(), Collections.emptyList())));
+        when(duperModelInfraApi.getSupportedInfraApplications()).thenReturn(List.of(application));
+        when(provisioner.prepare(any(), any(), any(), anyInt(), any())).thenReturn(List.of(
+                new HostSpec(node2.value(), List.of()),
+                new HostSpec(node3.value(), List.of())));
 
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
 
         verify(provisioner).prepare(eq(application.getApplicationId()), any(), any(), anyInt(), any());
         verify(provisioner).activate(any(), eq(application.getApplicationId()), any());
-        verify(duperModelInfraApi).infraApplicationActivated(application.getApplicationId(), Arrays.asList(node3, node2));
+        verify(duperModelInfraApi).infraApplicationActivated(application.getApplicationId(), List.of(node3, node2));
     }
 
     @Test
@@ -198,15 +199,15 @@ public class InfrastructureProvisionerTest {
         addNode(3, Node.State.active, Optional.of(target));
 
         when(provisioner.prepare(any(), any(), any(), anyInt(), any()))
-                .thenReturn(Arrays.asList(
-                        new HostSpec(node2.value(), Collections.emptyList()),
-                        new HostSpec(node3.value(), Collections.emptyList())));
+                .thenReturn(List.of(
+                        new HostSpec(node2.value(), List.of()),
+                        new HostSpec(node3.value(), List.of())));
 
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
 
         verify(provisioner).prepare(eq(application.getApplicationId()), any(), any(), anyInt(), any());
         verify(provisioner).activate(any(), eq(application.getApplicationId()), any());
-        verify(duperModelInfraApi).infraApplicationActivated(application.getApplicationId(), Arrays.asList(node2, node3));
+        verify(duperModelInfraApi).infraApplicationActivated(application.getApplicationId(), List.of(node2, node3));
     }
 
     @Test
@@ -214,14 +215,14 @@ public class InfrastructureProvisionerTest {
         when(duperModelInfraApi.infraApplicationIsActive(eq(application.getApplicationId()))).thenReturn(true);
         infrastructureVersions.setTargetVersion(nodeType, target, false);
 
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
         verifyRemoved(1);
 
         // Add nodes in non-provisionable states
         addNode(1, Node.State.dirty, Optional.empty());
         addNode(2, Node.State.failed, Optional.empty());
 
-        infrastructureProvisioner.maintain();
+        infraDeployer.getDeployment(application.getApplicationId()).orElseThrow().activate();
         verifyRemoved(2);
     }
 
@@ -233,7 +234,7 @@ public class InfrastructureProvisionerTest {
     private Node addNode(int id, Node.State state, Optional<Version> wantedVespaVersion) {
         Node node = tester.addNode("id-" + id, "node-" + id, "default", nodeType);
         Optional<Node> nodeWithAllocation = wantedVespaVersion.map(version -> {
-            ClusterSpec clusterSpec = ClusterSpec.from(ClusterSpec.Type.admin, new ClusterSpec.Id("clusterid"), ClusterSpec.Group.from(0), version, false, Collections.emptySet());
+            ClusterSpec clusterSpec = ClusterSpec.from(ClusterSpec.Type.admin, new ClusterSpec.Id("clusterid"), ClusterSpec.Group.from(0), version, false, Set.of());
             ClusterMembership membership = ClusterMembership.from(clusterSpec, 1);
             Allocation allocation = new Allocation(application.getApplicationId(), membership, new Generation(0, 0), false);
             return node.with(allocation);
